<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_expenses"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/expenses" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/add" />
    <item
        android:id="@+id/nav_reports"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/reports" />
    <item
        android:id="@+id/nav_goals"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/goals" />
</menu>